<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/img_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_foodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/paket_nila"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_foodDetail"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/paket_nila"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_discounted_foodPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/discounted_price"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_general_foodPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/discounted_price"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.jcminarro.roundkornerlayout.RoundKornerFrameLayout
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                app:corner_radius="4dp">
                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="#32cb00"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/add_to_price"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </com.jcminarro.roundkornerlayout.RoundKornerFrameLayout>
        </LinearLayout>


        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
            android:id="@+id/img_content"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/back_shadow"
            android:elevation="4dp"
            app:corner_radius="10dp">

            <ImageView
                android:id="@+id/img_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/food_image"
                android:scaleType="fitXY"
                android:src="@drawable/nila" />
        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>