<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetail">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E8E6E6"
        android:padding="8dp">

        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
            android:id="@+id/bg_rounded"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:corner_radius="10dp">

            <ImageView
                android:id="@+id/item_images"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/food_image"
                android:scaleType="fitXY"
                tools:src="@android:color/holo_blue_bright" />
        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>

        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
            android:id="@+id/rounded_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bg_rounded"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@android:color/white"
            app:corner_radius="12dp">

            <TextView
                android:id="@+id/tv_foodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/paket_nila"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_foodDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_foodName"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:lineSpacingMultiplier="1"
                android:text="@string/dtl_food"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>


        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rounded_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@android:color/white"
            app:corner_radius="12dp">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/tv_foodPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:lineSpacingMultiplier="1"
                        android:text="@string/harga_makanan"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_discounted_foodPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/discounted_price"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_general_foodPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/discounted_price"
                        android:textSize="16sp" />
                </TableRow>
            </TableLayout>

            <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tableLayout"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                app:corner_radius="12dp">

                <Button
                    android:id="@+id/btn_tambah_keranjang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorPrimary"
                    android:onClick="btnClick"
                    android:text="@string/tambah_ke_keranjang"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
    </RelativeLayout>

</ScrollView>